<resources>
    <string name="app_name">HostelApp</string>
    <string name="chaomung">Chào mừng các bạn đến với HostelApp</string>
    <string name="phonecheck">Nhập số điện thoại của bạn để tiếp tục đến HostelApp chúc các bạn có một trãi nghiệm tốt nhất!</string>
    <string name="phonehint">Nhập số điện thoại </string>
    <string name="helptxt">Nhập nội dung vào đây ... </string>
    <string name="tieptuc">Tiếp Tục</string>
    <string name="maOTP">Hãy nhập mã đã gửi về số điện thoại: </string>
    <string name="CODEOTP">Mã OTP</string>
    <string name="Enteryour">Enter your phone number to get started</string>
    <string name="ApiKye">AIzaSyD29QQuKhvQRuaPupN1U95D3DZoYZBEqHs</string>
    <string name="ApiKye1">AIzaSyDSLTUWBXLrMdx4RcEgV7FZ-4ci4k_pwfg</string>
    <string name="intro2">We provide the best quality accommodation</string>
    <string name="intro2nho">Airy, Spacious, Fully Equipped, Very Clean</string>
    <string name="intro3">Schedule when you want\n to check the room</string>
    <string name="intro3nho">Safety, Security, Accuracy for customers,\n quality collaborators</string>
    <string name="intro4">Exactly about the details of the rooms</string>
    <string name="intro4nho">Accurate on location and details of each room, responsible for customer safety</string>
    <string name="createAcc">Let’s create an account for you</string>
    <string name="configpass">Enter your confirm password</string>
    <string name="confirmOtp">Xác Nhận</string>
    <string name="dacotk">Do you have an account?</string>
    <string name="btnsignup">REGISTER</string>
    <string name="welcom">Welcome to Kun Hostel App</string>
    <string name="welcomshort">Welcome</string>
    <string name="welcomCome">to Kun Hostel</string>
    <string name="btnlogin">LOGIN</string>
    <string name="loginIsSuccessful">Login Successful</string>
    <string name="RegisterIsSuccessful">Register Successful</string>
    <string name="VerificationFailed">Verification failed</string>
    <string name="VerificationSuccessful">Verification Successful</string>
    <string name="loginIsUserExist">User Exist</string>
    <string name="loginIsFail">Otp Fail</string>
    <string name="quenmk">Forgot password?</string>
    <string name="maotp">Mã OTP</string>
    <string name="nhapotp">Hãy nhập mã đã gửi về điện thoại</string>
    <string name="btn_tieptuc">NEXT</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="places">Places near </string>
    <string name="tenroom">21 Tien Son</string>
    <string name="btnselect">Search a room</string>
    <string name="slu_search">Find a perfect place to stay</string>
    <string name="txt_people"> People</string>
    <string name="txt_guest">Guests</string>
    <string name="txt_price">Price</string>
    <string name="edt_price">15$</string>
    <string name="txt_area">Area</string>
    <string name="edt_area">Da Nang</string>
    <string name="txt_type">Type</string>
    <string name="edt_type">Hostel</string>
    <string name="title_local">Da Nang</string>
    <string name="btn_select">Select</string>
    <string name="btn_rent">Rent</string>
    <string name="nullRent">bạn chưa thuê phòng</string>
    <string name="btn_manager">Manager</string>
    <string name="item_refundable">Refundable</string>
    <string name="item_area">Area: </string>
    <string name="item_grocery">Grocery</string>
    <string name="item_wifi">Wi-Fi</string>
    <string name="item_airconditioner">Air Conditioner</string>
    <string name="item_bath">Bath</string>
    <string name="item_month">1 month</string>
    <string name="localtion">21 Tien son 17, Hoa cuong bac, Hai chau, Da Nang</string>
    <string name="miles">3.2 miles away</string>
    <string name="listview">List view</string>
    <string name="notification">Notifications</string>
    <string name="item_notification">Have you checked in?</string>
    <string name="chatpart_name">Tran Cuong</string>
    <string name="search">Search</string>
    <string name="nd_chat">Khi nao xem tro</string>
    <string name="favorite">Your Favorite Room</string>
    <string name="billmyroom">Bill In Room</string>
    <string name="RoomViewing">Room Viewing History</string>
    <string name="MyRoom">My Room</string>
    <string name="phong"> Phòng</string>
    <string name="Help">Help</string>
    <string name="ReportR">Report Room</string>
    <string name="ReportB">Report Boarding</string>
    <string name="send">Send to Admin</string>
    <string name="back">Back</string>
    <string name="Language">Language</string>
    <string name="settings">Settings</string>
    <string name="watched">Watched 3 days ago </string>
    <string name="tiengviet">Tieng Viet</string>
    <string name="anh">Tieng Anh</string>
    <string name="nhat">Tieng Nhat</string>
    <string name="trung">Tieng Trung</string>
    <string name="apply">APPLY</string>
    <string name="accountsetting">Account Settings</string>
    <string name="editprofile">Edit profile</string>
    <string name="editpass">Change password</string>
    <string name="turnon">Turn on notifications</string>
    <string name="More">More</string>
    <string name="About">About us</string>
    <string name="Privacy">Privacy policy</string>
    <string name="Terms">Terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_kun_hostel_app">Welcome to Kun Hostel App</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_number_phone">Enter your number phone</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="m_otp">Mã OTP</string>
    <string name="h_y_nh_p_m_g_i_v_s_i_n_tho_i">Hãy nhập mã đã gửi về số điện thoại</string>
    <string name="mail">Hãy nhập mã đã gửi về mail</string>
    <string name="txtmail">Enter your Email</string>
    <string name="phoneotp">0974559331</string>
    <string name="_21_tien_son_17_hoa_cuong_bac_hai_chau_da_nang">21 Tien son</string>
    <string name="danang">, Da Nang</string>
    <string name="find_a_perfect_place_to_stay">Find a perfect place to stay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_21_tien_son_near">21 Tien Son</string>
    <string name="placesHot">Room Hot</string>
    <string name="khuvuc">Chọn Khu Vực</string>
    <string name="khuvuchome">"Khu Vực: "</string>
    <string name="bancochac">Bạn có chắc chắn muốn huỷ thích room này ?</string>
    <string name="nameUser">Enter your Name</string>
    <string name="bothich">Bạn đã bỏ thích thành công</string>
    <string name="thongbao">Thông Báo!!</string>
    <string name="diachihot">179 Le Loi</string>
    <string name="kmhot">4.1 km away from you</string>
    <string name="statusHot">hostel</string>
    <string name="priceHot">$ 120</string>
    <string name="price">Giá phòng: </string>
    <string name="numberRoom">Phòng trống: </string>
    <string name="nhaplai">Nhập Lại Mật Khẩu</string>
    <string name="nhapdaydu">Nhập Đầy Đủ Thông Tin</string>
    <string name="nhapformat">Format Password Strong</string>
    <string name="nhaplaiphone">Nhập Lại số điện thoại</string>
    <string name="resetOtp">Gửi Lại Otp</string>
    <string name="diendaydu">Điền đầy đủ các Ô</string>
    <string name="LogError">Log Error</string>
    <string name="title_activity_register_compose">RegisterCompose</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_my_room">MyRoom</string>
    <string name="tiendien">Tiền Điện</string>
    <string name="tiennuoc">Tiền Nước</string>
    <string name="tongtien">Tổng Tiền</string>
    <string name="chiphikhac">Chi Phí Khác</string>
    <string name="thang">Tháng</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="review">review</string>
    <string name="sendAdmin">Hãy gửi cho Tôi vấn đề bạn thắc mắc</string>
    <string name="Welcome_t">Xin Chào bạn! Tôi có thể giúp gì cho bạn</string>
    <string name="tiengtrung">Chọn Ngôn Ngữ Tiếng Trung</string>
    <string name="tiengnhat">Chọn Ngôn Ngữ Tiếng Nhật</string>
    <string name="tienganh">Chọn Ngôn Ngữ Tiếng Anh</string>
    <string name="tiengvietnam">Chọn Ngôn Ngữ Tiếng Việt</string>
    <string name="you_have_successfully_booked_a_room_at_room_21_tien_son">You have successfully booked a room at room 21 Tien Son</string>
    <string name="ch_n_khu_v_c">Chọn Khu Vực</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="chat">Type something....</string>
    <string name="Bad">Bad</string>
    <string name="Not_Bad">Not Bad</string>
    <string name="Nice">Nice!</string>
    <string name="Good">Good Job!</string>
    <string name="Awesome">Awesome!</string>
    <string name="Rate">Rate The Service</string>
    <string name="phản_hồi">Hãy cho tôi xin phản hồi</string>

</resources>