<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:background="@android:color/white"
       app:popupTheme="@android:color/black" />
   <LinearLayout
       android:layout_weight="10"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_weight="3"
          android:orientation="horizontal"
          android:background="@color/white"
          android:layout_height="@dimen/size70dp">
         <TextView
             android:id="@+id/thang"
             android:layout_weight="1"
             android:text="@string/thang"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:gravity="center"
             android:layout_width="@dimen/size40dp"
             android:layout_height="match_parent"/>
         <TextView
             android:id="@+id/tienDien"
             android:layout_weight="2"
             android:text="@string/tiendien"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:gravity="center"
             android:layout_width="@dimen/size40dp"
             android:layout_height="match_parent"/>
         <TextView
             android:id="@+id/tienNuoc"
             android:layout_weight="2"
             android:text="@string/tiennuoc"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:gravity="center"
             android:layout_width="@dimen/size40dp"
             android:layout_height="match_parent"/>
         <TextView
             android:id="@+id/tienKhac"
             android:layout_weight="3"
             android:text="@string/chiphikhac"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:gravity="center"
             android:layout_width="@dimen/size40dp"
             android:layout_height="match_parent"/>

         <TextView
             android:id="@+id/tongTien"
             android:layout_weight="2"
             android:text="@string/tongtien"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:gravity="center"
             android:layout_width="@dimen/size40dp"
             android:layout_height="match_parent"/>
      </LinearLayout>
      <androidx.recyclerview.widget.RecyclerView
          android:layout_marginLeft="5dp"
          android:layout_weight="7"
          android:id="@+id/listBill"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>
   </LinearLayout>
</LinearLayout>
