<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddeplam"
    tools:context=".view.user.profile.Help">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="152dp"
        android:layout_height="124dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/sendAdmin"
        android:textColor="@color/mauchu"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="238dp"
        android:layout_height="126dp"
        android:layout_marginTop="192dp"
        android:gravity="center"
        android:text="@string/Welcome_t"
        android:textColor="@color/mauchu"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textColorHint="@color/mauchu"
        android:hint="@string/helptxt"
        android:background="@drawable/edit_text"
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/editText">
        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/ediiiboder"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:layout_marginLeft="18dp"
            android:id="@+id/btn_help"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:background="@drawable/radius_btn"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>