<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="false"
    tools:context=".view.account.Register">

    <ImageView
        android:id="@+id/imgBackGround"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBackGround">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createAcc"
            android:textAlignment="center"
            android:textColor="@color/mauchu"
            android:textSize="16sp" />

        <EditText
            android:inputType="phone"
            android:maxHeight="1dp"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_your_number_phone"
            android:padding="10dp"
            android:textColor="@color/mauchu"
            android:textColorHint="@color/mauchu"
            android:textSize="14sp" />

        <EditText
            android:maxHeight="1dp"
            android:inputType="textPassword"
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_your_password"
            android:padding="10dp"
            android:textColor="@color/mauchu"
            android:textColorHint="@color/mauchu"
            android:textSize="14sp" />
        <EditText
            android:maxHeight="1dp"
            android:inputType="textPassword"
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/configpass"
            android:padding="10dp"
            android:textColor="@color/mauchu"
            android:textColorHint="@color/mauchu"
            android:textSize="14sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/doHave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:text="@string/do_you_already_have_an_account"
            android:textColor="@color/teal_700" />
    </LinearLayout>

    <Button
        android:layout_marginTop="40dp"
        android:text="@string/btnsignup"
        android:background="@drawable/radius_btn"
        android:id="@+id/btn_register"
        android:layout_width="336dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <ProgressBar
        android:layout_marginTop="10dp"
        android:id="@+id/progress_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>