<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="@dimen/size10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/boderimg">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            app:cardCornerRadius="30dp"
            android:id="@+id/imgRoom"
            android:background="@drawable/border_mask"
            android:src="@drawable/detail"
            android:clipToOutline="true"
            android:outlineProvider="background"
            android:scaleType="centerCrop"
            android:layout_width="358dp"
            android:layout_height="184dp"/>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/addRoom"
            android:alpha="0.7"
            android:textStyle="bold"
            android:textColor="@color/den"
            android:text="@string/tenroom"
            android:textSize="22sp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/map"
                android:layout_width="@dimen/size20dp"
                android:layout_height="@dimen/size20dp"/>
            <TextView
                android:id="@+id/areaRoom"
                android:layout_marginLeft="10dp"
                android:textColor="@color/xamne"
                android:text="@string/item_refundable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/decription"
                android:layout_width="@dimen/size20dp"
                android:layout_height="@dimen/size20dp"/>
            <TextView
                android:id="@+id/descriptionRoom"
                android:layout_marginLeft="10dp"
                android:textColor="@color/xamne"
                android:text="@string/item_grocery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/numberroom"
                android:paddingLeft="-10dp"
                android:layout_width="@dimen/size24dp"
                android:layout_height="@dimen/size24dp"/>
            <TextView
                android:id="@+id/numberRoom"
                android:layout_marginLeft="10dp"
                android:textColor="@color/xamne"
                android:text="@string/item_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:paddingLeft="-10dp"
                android:src="@drawable/electricitybill"
                android:layout_width="@dimen/size20dp"
                android:layout_height="@dimen/size20dp"/>
            <TextView
                android:id="@+id/electricitybill"
                android:layout_marginLeft="10dp"
                android:textColor="@color/xamne"
                android:text="@string/item_airconditioner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/billwater"
                android:layout_width="@dimen/size20dp"
                android:layout_height="@dimen/size20dp"/>

            <TextView
                android:id="@+id/waterBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/item_bath"
                android:textColor="@color/xamne" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/peopleinroom"
                android:layout_width="@dimen/size20dp"
                android:layout_height="@dimen/size20dp"/>
            <TextView
                android:id="@+id/numberPeople"
                android:layout_marginLeft="10dp"
                android:textColor="@color/xamne"
                android:text="@string/item_bath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/priceRoom"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:alpha="0.7"
                    android:textColor="@color/den"
                    android:text="@string/priceHot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/xamne"
                    android:text="@string/item_month"
                    android:textSize="16sp"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:layout_marginRight="10dp"
                android:text="@string/btn_manager"
                android:background="@drawable/radius_btn"
                android:id="@+id/btn_selectManager"
                android:layout_width="180dp"
                android:layout_height="60dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
