<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:popupTheme="@android:color/black" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/vietnam"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_weight="1"
            android:src="@drawable/vn"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="9"
            android:layout_gravity="center"
            android:text="@string/tiengvietnam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tienganh"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_weight="1"
            android:src="@drawable/nuocanh"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="9"
            android:layout_gravity="center"
            android:text="@string/tienganh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/nhatban"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_weight="1"
            android:src="@drawable/nhatban"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="9"
            android:layout_gravity="center"
            android:text="@string/tiengnhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/trungquoc"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="10dp"
            android:layout_weight="1"
            android:src="@drawable/trungquoc"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="9"
            android:layout_gravity="center"
            android:text="@string/tiengtrung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>